--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+/* Importación de las directivas base, de componentes y de utilidades de Tailwind */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
